p3/confs/app.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wil-app
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wil-app
  template:
    metadata:
      labels:
        app: wil-app
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 80
        volumeMounts:
        - name: html-volume
          mountPath: /usr/share/nginx/html
      volumes:
      - name: html-volume
        configMap:
          name: wil-app-html
---
apiVersion: v1
kind: Service
metadata:
  name: wil-app-service
  namespace: dev
spec:
  selector:
    app: wil-app
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30081
