p3/confs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: playground
  namespace: dev
spec:
  type: LoadBalancer
  selector:
    app: playground
  ports:
  - name: http
    protocol: TCP
    port: 8888
    targetPort: 8888
    nodePort: 30888
